@@ -28,20 +28,12 @@ if (${HOSTNAME} =~ m/^bit/) {
 } elsif (${HOSTNAME} =~ m/^hopper\w+[.nersc.gov]?$/) {
   # on the front end of hopper at NERSC, there is a choice to be made about what compiler to use
   # print "\nPlease make sure that PrgEnv-gnu is used, for example by executing 'module swap PrgEnv-pgi PrgEnv-gnu'\n\n";
-  $cmd="./configure --without-getpwuid --with-quiet-nan CFLAGS='-fPIC -O3 -std=c++11' CXXFLAGS='-fPIC -O3 -std=c++11' --without-java --prefix=/project/projectdirs/m1248/hopper/gnu";
-  #$cmd="./configure CC=pgcc CXX=pgCC --without-getpwuid --with-quiet-nan CFLAGS='-fPIC -O3' CXXFLAGS='-fPIC -O3' --without-java --prefix=/project/projectdirs/m1248/hopper/pgi";
-} elsif (${HOSTNAME} =~ m/^sith/) {# sith.ccs.ornl.gov
-  # on sith at ORNL, try GNU compilers
-  $cmd="./configure --prefix=${HOME}/`uname -s`/sith-gnu --without-java --enable-xopt --disable-debug"
+  # $cmd="./configure --without-getpwuid CFLAGS='-fPIC -O' CXXFLAGS='-fPIC -O' --without-java --prefix=/project/projectdirs/m1248/hopper/gnu/fastbit";
+  $cmd="./configure CC=pgcc CXX=pgCC --without-getpwuid CFLAGS='-fPIC -O' CXXFLAGS='-fPIC -O' --without-java --prefix=/project/projectdirs/m1248/hopper/pgi/fastbit";
 } elsif (${HOSTNAME} =~ m/^titan/) {#[-\w+]?[.ornl.gov]?$
-  # on titan at ORNL, try GNU compilers
-  $cmd="./configure --prefix=${HOME}/`uname -s`/titan-gnu --without-java --enable-xopt --disable-debug --disable-shared --without-getpwuid --with-quiet-nan"
   # on titan at ORNL, need to choose between PGI and GNU compilers
-  #$cmd="env CC=pgcc CXX=pgCC ./configure --prefix=${HOME}/`uname -s`/tital-pgi --without-java --enable-xopt --disable-debug --disable-shared"
-} elsif (${HOSTNAME} =~ m/^mira/) {# mira at ALCF
-  # need bgclang
-  print "\nPlease use +mpiwrapper-bgclang in .soft\n\n";
-  $cmd="env CC=bgclang CXX=bgclang++11 ./configure --prefix=${HOME}/`uname -s` --without-java --disable-debug --disable-shared"
+  # currently the first choice is PGI compiler
+  $cmd="env CC=pgcc CXX=pgCC ./configure --prefix=${HOME}/`uname -s`/fastbit/pgi --without-java --enable-xopt --disable-debug --disable-shared"
 } elsif (${HOSTNAME} =~ m/^cvr\w+[\.nersc\.gov]?$/) {
   # on carver at NERSC, use the GNU compilers, no debugging
   $cmd="./configure --without-getpwuid --with-quiet-nan --enable-xopt --disable-debug --without-java --prefix=/project/projectdirs/m1248/carver";
