@@ -1,3 +1,7 @@
+2013-08-28 John Wu <John dot Wu at ACM dot org>
+	* src/part.h, src/query.cpp: rename ibis::part::hasRIDs to
+	ibis::part::explicitRIDs
+
 2013-08-21 John Wu <John dot Wu at ACM dot org>
 	* src/index.cpp: add print statement to ibis::index::clear (need
 	to refrain from call pure virtual functions)
